test/Fail/Issue1986.err
An internal error has occurred. Please report this as a bug.
Location of the error: src/full/Agda/TypeChecking/CompiledClause/Compile.hs:167
